--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ name = "quickperm"
 version = "0.0.1"
 authors = ["Scallop Ye <yescallop@gmail.com>"]
 edition = "2021"
+
+[dev-dependencies]
+paste = "1.0"
